--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axiom": "^0.1.6",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.10",
     "mqtt": "^4.2.6",
     "vue": "^2.6.11",
     "vue-mqtt": "^2.0.3",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.6.0"
   },
